add launch_nn to start.sh